--- a/dashboard/www/styles.css
+++ b/dashboard/www/styles.css
@@ -382,7 +382,6 @@ Comes from https://github.com/rstudio/shinydashboard/blob/main/inst/AdminLTE/Adm
 .btn.radiobtn.btn-primary.active, .btn.radiobtn.btn-primary:active {
   background-color: var(--phs-purple-80); 
   border-radius: 0px;
-  font-size: 14pt;
   font-weight: 600;
   border-color: var(--phs-purple);
   
@@ -391,13 +390,12 @@ Comes from https://github.com/rstudio/shinydashboard/blob/main/inst/AdminLTE/Adm
 .btn.radiobtn.btn-primary.focus, .btn.radiobtn.btn-primary:focus {
   background-color: var(--phs-purple-80); 
   border-radius: 0px;
-  font-size: 14pt;
   font-weight: 600;
   border-color: var(--phs-purple);
   
 } 
 
-.btn.radiobtn.hover, .btn.radiobtn:hover {
+.btn.radiobtn.btn-primary.hover, .btn.radiobtn.btn-primary:hover {
     background-color: var(--phs-purple-80);
     border-radius: 0px;
     border-color: var(--phs-purple-80);
