--- a/dashboard/www/styles.css
+++ b/dashboard/www/styles.css
@@ -461,17 +461,13 @@ Comes from https://github.com/rstudio/shinydashboard/blob/main/inst/AdminLTE/Adm
     font-size: 16px;
 }
 
-/* trend and methodology tab buttons */
-#trend_tab, #method_tab {
-  
+/* ldp and methodology tab buttons */
+#ldp_tab, #method_tab {
   border-bottom: solid; 
   border-color: var(--phs-purple-50);
   border-width: medium
 }
 
-#trend_tab {
-  margin-bottom: -15px;
-}
 .btn.radiobtn.btn-tab {
   border-radius: 0px; 
   color: #FFFFFF;
